--- a/src/ComponentCSS/Mainpage.css
+++ b/src/ComponentCSS/Mainpage.css
@@ -19,6 +19,41 @@
     flex-direction: column;
 }
 
+#leftcontainer{
+    grid-area: 1/1/11/3;
+    display:grid;
+    grid-template-rows: repeat(20, 5%);
+    grid-template-columns: repeat(20, 5%);
+}
+
+#contactcontainer{
+    box-sizing: border-box;
+    grid-area: 17/16/21/21;
+    display: flex;
+    flex-direction: column;
+}
+
+#githubcontainer, #linkedincontainer{
+    display: flex;
+    align-items: flex-end;
+    text-align: right;
+}
+
+#githubcontainer{
+    flex: 1;
+}
+
+#githubcontainer img{
+    max-width: 50%;
+    height: auto;
+    padding-bottom: 1rem;
+}
+
+#linkedincontainer img{
+    max-width: 48%;
+    height: auto;
+}
+
 #navbar {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
