--- a/src/ComponentCSS/Experience.css
+++ b/src/ComponentCSS/Experience.css
@@ -19,17 +19,17 @@
 }
 
 #experienceheader{
-    font-size: 40px;
+    font-size: 1.55vw;
     margin-bottom: 0rem;
 }
 
 .experiencecompany{
     font-weight: bold;
-    font-size: 25px;
+    font-size: .98vw;
 }
 
 .experiencedate{
-    font-size: 18px;
+    font-size: .7vw;
     line-height: 1.5rem;
 }
 
@@ -37,7 +37,7 @@
     color: #a8b2d1;
     margin-top: -.5em;
     line-height: 0;
-    font-size: 18px;
+    font-size: .75vw;
 }
 
 .experiencebody > ul{
@@ -57,7 +57,6 @@
     grid-area: 2/3/9/11;
     display:flex;
     flex-direction: column;
-    font-size: 35px;
 }
 
 .companyname{
