--- a/src/ComponentCSS/Projects.css
+++ b/src/ComponentCSS/Projects.css
@@ -4,7 +4,7 @@
     background-color: blue;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700;&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700&display=swap');
 
 #projectsgrid{
@@ -54,7 +54,7 @@
 }
 
 #projectssection{
-    grid-area: 2/3/9/11;
+    grid-area: 1/3/9/11;
     display:flex;
     flex-direction: column;
 }
@@ -64,6 +64,7 @@
 }
 
 #projectswrappertop{
+    margin-top: 3em;
     flex: 0 1 5%;
 }
 
