--- a/src/ComponentCSS/Mainpage.css
+++ b/src/ComponentCSS/Mainpage.css
@@ -27,12 +27,13 @@
 
 #contactcontainer{
     box-sizing: border-box;
-    grid-area: 17/16/21/21;
+    grid-area: 16/17/21/21;
     display: flex;
     flex-direction: column;
 }
 
 #githubcontainer, #linkedincontainer{
+    flex: 1 1 50%;
     display: flex;
     align-items: flex-end;
     text-align: right;
@@ -43,13 +44,13 @@
 }
 
 #githubcontainer img{
-    max-width: 50%;
+    max-width: 70%;
     height: auto;
     padding-bottom: 1rem;
 }
 
 #linkedincontainer img{
-    max-width: 48%;
+    max-width: 69%;
     height: auto;
 }
 
